2006-05-07  Joshua Sled  <jsled@asynchronous.org>

	* src/register/register-gnome/formulacell-gnome.c
	(gnc_formula_cell_direct_update): Call new factored-out logic.
	Fix Bug#340875 regarding same.

	* src/register/register-gnome/pricecell-gnome.c
	(gnc_basic_cell_insert_decimal): Factor utf8-safe string copying +
	decimal-point insertion out.
	(gnc_price_cell_direct_update): Call new factored-out logic.

2006-05-06  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view-account.c: Rebuild the column
	selection menu when the report currency is changed.  Fixes
	#340243.

	* src/register/register-gnome/gnucash-header.c:
	* src/gnome-utils/dialog-transfer.c: Trivial replacements for
	deprecated functions.

	* src/gnome-utils/gnc-file.c:
	* src/gnome-utils/gnc-main-window.c: Use the new qof functions to
	provide a dirty indication in the title bar, fixing #339026.  Also
	provide an indication of how long the book has been dirty in the
	"save changes to file" dialog.

	* lib/libqof/qof/qofbook.[ch]:
	* lib/libqof/qof/qofbook-p.h:
	* lib/libqof/qof/qofutil.c: Add support for directly marking the
	book dirty, for recording the time that the book transitioned from
	clean to dirty, and for calling back a registered function when
	the book transitions from clean to dirty.

	* configure.in: Can't use external qof until it supports
	"alternate dirty mode".

	* src/gnome-utils/dialog-commodity.c:
	* src/engine/gnc-lot.[ch]:
	* src/engine/gnc-commodity.[ch]:
	* src/engine/SchedXaction.[ch]: Add begin_edit/commit_edit
	brackets around object modifications.  Bug #339943 should be fixed
	as of this change.

	* src/engine/gnc-pricedb.c: No longer need special handling when
	marking prices as dirty.

	* src/engine/Account.c: Remove redundant setting an account dirty.
	Set collection clean/dirty functions.

	* src/engine/gnc-engine.c: Unconditionally enable qof alternate
	dirty mode.

	* lib/libqof/qof/qofbook.[ch]:
	* lib/libqof/qof/qofid-p.h: